# Jni-info

.github/workflows/: main.yml  setup.yml
app/: CMakeLists.txt  build.gradle
app/src/main/java/com/example/copg/: Appinfo.java  COPGNative.java
app/src/main/jni/: copg_jni.c
